--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -89,7 +89,8 @@
                         <li><a href="/services">Services</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <div class="uk-navbar-item">
-                                <a class="uk-button uk-button-primary" href="#modal-signup" uk-toggle>Free Site Audit</a>
+                                <li><a class="uk-button uk-button-primary" href="#modal-signup" uk-toggle>Free Site Audit</a></li>
+                                {{ partial "templates/modal" . }}
                         </div>                    
                     </ul>
                 </div>
