--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -1,4 +1,4 @@
-{{ $social := .Site.Data.profile.add_social_links }}
+{{ $social := .Site.Data.profile.social }}
 {{ $contact := .Site.Data.profile.primary_account }}
 <div class="uk-visible@s" uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky uk-dark; cls-inactive: uk-navbar-transparent; top: 200">
     
@@ -37,11 +37,11 @@
                                 <div class="uk-navbar-dropdown-grid uk-child-width-1-2" uk-grid>
                                     <div>
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header">Real Estate Websites</li>
+                                            <li class="uk-nav-header accent">Real Estate Websites</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/real-estate-agent-websites">Agent websites</a></li>
                                             <li><a href="/real-estate-broker-websites">Broker websites</a></li>
-                                            <li class="uk-nav-header">IDX Websites</li>
+                                            <li class="uk-nav-header accent">IDX Websites</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/agent-idx-websites">Agent IDX</a></li>
                                             <li><a href="/broker-idx-websites">Broker IDX</a></li>
@@ -49,11 +49,11 @@
                                     </div>
                                     <div>
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header">Small Business Websites</li>
+                                            <li class="uk-nav-header accent">Small Business Websites</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/custom-website-design">Custom Website</a></li>
                                             <li><a href="/ecommerce-website-design">Ecommerce website</a></li>
-                                            <li class="uk-nav-header">Added Website Tools</li>
+                                            <li class="uk-nav-header accent">Added Website Tools</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/google-analytics">Web Analytics</a></li>
                                             <li><a href="/google-console">Google console</a></li>
@@ -68,7 +68,7 @@
                                 <div class="uk-navbar-dropdown-grid uk-child-width-1-2" uk-grid>
                                     <div>
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header">Hungry Ram</li>
+                                            <li class="uk-nav-header accent">Hungry Ram</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/about">About</a></li>
                                             <li><a href="/contact">Contact</a></li>
@@ -77,7 +77,7 @@
                                     </div>
                                     <div>
                                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                                            <li class="uk-nav-header">Resources</li>
+                                            <li class="uk-nav-header accent">Resources</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/faq">FAQ</a></li>
                                             <li><a href="/portfolio">Portfolio</a></li>
