--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
     <div class="uk-position-top full-nav-wrapper">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="uk-padding">
+    <div class="uk-padding uk-margin-large-top">
     <h1 class="uk-text-uppercase uk-white uk-text-center">{{ .Title }}</h1>
     </div>
 </div>
