--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -54,13 +54,13 @@
             </div>
         </div>
     </div>
-    <div class="uk-container">
+    <div class="uk-container uk-padding">
         <div class="uk-grid">
             <div class="uk-width-1-2@s">
                 <p class="uk-light uk-text-small">&copy; Copyright {{ dateFormat "2006" now }}, {{ .Site.Data.profile.company_name }}  &middot; <a href="https://hungryram.com" target="_blank">Website Developed by Hungry Ram</a></p>
                 <ul class="hr-legals uk-padding-remove">
                     {{ range where $.Site.Pages.ByWeight "Type" "legal" }}
-                    <li class="uk-light uk-text-small"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+                    <li class="uk-light uk-text-small uk-display-inline uk-margin-medium-right"><a href="{{ .Permalink }}">{{ .Title }}</a></li>
                     {{ end }}
                   </ul>
             </div>
