--- a/layouts/partials/home/second-home.html
+++ b/layouts/partials/home/second-home.html
@@ -4,7 +4,11 @@
         <div uk-grid>
             <div class="uk-width-1-2@s uk-card uk-flex uk-flex-middle">
                 <div class="uk-width-large switcher">
-                    <h2>{{ .Site.Data.home.text_and_image.heading }}</h2>
+                    <ul class="uk-switcher uk-margin right-switcher">
+                        {{ range $switcher }}
+                        <li><h2>{{ .title }}</h2></li>
+                        {{ end }}
+                    </ul>
                     <div class="uk-margin-medium">
                         <ul class="uk-switcher uk-margin right-switcher">
                             {{ range $switcher }}
