--- a/layouts/agent-idx-websites/agent-idx-websites.html
+++ b/layouts/agent-idx-websites/agent-idx-websites.html
@@ -52,13 +52,14 @@
                     <h2>Delivering the ultimate real estate website at an affordable price</h2>
                     <div class="uk-margin-medium">
                         <p>A more powerful online presence for your real estate business. Combining modern web tools with Ihomefinder, your site will perform different than most real estate sites.</p>
-                        <a href="" class="uk-button uk-button-primary">Get started</a>
                     </div>
                     <ul class="uk-list uk-text-left">
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Property search with lead capture</li>
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Track lead activities and the properties viewed</li>
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Control your listings in the admin</li>
                     </ul>
+                    <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
+
                 </div>
             </div>
             <div class="uk-width-expand">
@@ -86,13 +87,13 @@
                 <div class="uk-width-large uk-margin-medium">
                     <h2>Need a different design for your own branding?</h2>
                     <p>A more custom design will better reflect your brand image and how you are presented to your visitors.</p>
-                    <a href="" class="uk-button uk-button-primary">Learn more</a>
-
                     <ul class="uk-list uk-text-left">
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Design 100% unique for your business</li>
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Affordable than most</li>
                         <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Request custom features</li>
                     </ul>
+                    <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Learn more</a>
+
                 </div>
             </div>
         </div>
@@ -107,7 +108,7 @@
                 <div class="uk-grid">
                     <div class="uk-width-1-2@s uk-flex uk-flex-middle">
                         <div>
-                            <h3>Transform your ideas into a great product</h3>
+                            <h2>Transform your ideas into a great product</h2>
                             <p>Customize the framework to match your small business processes using simple drag-and-drop tools.</p>
                         </div>
                     </div>
