--- a/layouts/ecommerce-website-design/ecommerce-website-design.html
+++ b/layouts/ecommerce-website-design/ecommerce-website-design.html
@@ -30,18 +30,18 @@
                 </div>
             </div>
             <div class="uk-width-1-2@s uk-visible@s uk-text-center">
-                    <img src="https://demo26.atiframe.com/wp-content/uploads/2020/02/image-10.png" alt="">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628206172/hungryram/solution_etdbvl.png" alt="" width="300">
             </div>
         </div>
 
         <div class="uk-flex uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@s uk-visible@s uk-text-center">
-                    <img src="https://demo26.atiframe.com/wp-content/uploads/2020/02/Untitled-1-9-1.png" alt="">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628205889/hungryram/tools_c160ji.png" alt="" width="300">
             </div>
             <div class="uk-width-1-2@s">
                 <div class="uk-card border uk-card-body">
-                    <h4>Flexible Solutions</h4>
-                    <p>Shopify allows you to extend the functionality of your website with third-party integration through their app store. This gives you the ability to extend the basic functionality of your store. You may find it that third party integration can help and optimize your operations.</p>
+                    <h4>Tools to manage your business</h4>
+                    <p>Running an ecommerce shop means staying on top of lots of moving parts. The Shopify admin allows merchants to view all components of the business and ensure things are running smoothly.</p>
                 </div>
             </div>
         </div>
@@ -49,23 +49,23 @@
         <div class="uk-flex uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@s">
                 <div class="uk-card border uk-card-body">
-                    <h4>Flexible Solutions</h4>
-                    <p>Shopify allows you to extend the functionality of your website with third-party integration through their app store. This gives you the ability to extend the basic functionality of your store. You may find it that third party integration can help and optimize your operations.</p>
+                    <h4>Managing sales and products</h4>
+                    <p>With store management, you'll be able to keep track of your customers online orders and the state of the order. Organize products through flexible collections and track your inventory when items are constantly purchased.</p>
                 </div>
             </div>
             <div class="uk-width-1-2@s uk-visible@s uk-text-center">
-                    <img src="https://demo26.atiframe.com/wp-content/uploads/2020/02/image-10.png" alt="">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628206259/hungryram/manage-sales_uawtp1.png" alt="" width="300">
             </div>
         </div>
 
         <div class="uk-flex uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@s uk-visible@s uk-text-center">
-                    <img src="https://demo26.atiframe.com/wp-content/uploads/2020/02/Untitled-1-9-1.png" alt="">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628206053/hungryram/payment_ila4rw.png" alt="" width="300">
             </div>
             <div class="uk-width-1-2@s">
                 <div class="uk-card border uk-card-body">
-                    <h4>Flexible Solutions</h4>
-                    <p>Shopify allows you to extend the functionality of your website with third-party integration through their app store. This gives you the ability to extend the basic functionality of your store. You may find it that third party integration can help and optimize your operations.</p>
+                    <h4>Secured Payment</h4>
+                    <p>Shopify is integrated with their own payment system, the simplest way to accept all types of payments. Payment details are synced clearly with orders, making it easy for you to see how much they've paid without leaving Shopify.</p>
                 </div>
             </div>
         </div>
