--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -156,13 +156,9 @@
                         <li class="uk-nav-divider"></li>
                         <li><a href="/faq">FAQ</a></li>
                         <li><a href="/portfolio">Portfolio</a></li>
-                        <li class="uk-nav-header">Added Website Tools</li>
-                        <li class="uk-nav-divider"></li>
-                        <li><a href="/google-analytics">Web Analytics</a></li>
-                        <li><a href="/google-console">Google console</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
                 <li class="uk-nav-divider"></li>
                 <li class="uk-nav-header"></li>
                 {{ if $social.facebook }}<li class="uk-display-inline-block"><a href="{{ $social.facebook }}" target="_blank" uk-icon="facebook"></a></li>{{ end }}
