--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -11,10 +11,10 @@
                 </div>
                 <div class="uk-width-1-2@s">
                     <div class="uk-flex uk-flex-middle uk-flex-right">
-                        {{ if $social.instagram }}<a href="" class="uk-icon-button uk-margin-small-right" uk-icon="instagram"></a>{{ end }}
-                        {{ if $social.facebook }}<a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>{{ end }}
-                        {{ if $social.pinterest }}<a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="pinterest"></a>{{ end }}
-                        {{ if $social.twitter }}<a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="twitter"></a>{{ end }}
+                        {{ if $social.instagram }}<a href="{{ $social.instagram }}" class="uk-icon-button uk-margin-small-right" uk-icon="instagram" target="_blank"></a>{{ end }}
+                        {{ if $social.facebook }}<a href="{{ $social.facebook }}" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook" target="_blank"></a>{{ end }}
+                        {{ if $social.pinterest }}<a href="{{ $social.pinterest }}" class="uk-icon-button  uk-margin-small-right" uk-icon="pinterest" target="_blank"></a>{{ end }}
+                        {{ if $social.twitter }}<a href="{{ $social.twitter }}" class="uk-icon-button  uk-margin-small-right" uk-icon="twitter" target="_blank"></a>{{ end }}
                     </div>
                 </div>
             </div>
