--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -71,8 +71,8 @@
                                             <li class="uk-nav-header accent">Hungry Ram</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/about">About</a></li>
+                                            <li><a href="/portfolio">Portfolio</a></li>
                                             <li><a href="/contact">Contact</a></li>
-                                            <li><a href="/blog">Blog</a></li>
                                         </ul>
                                     </div>
                                     <div>
@@ -80,7 +80,7 @@
                                             <li class="uk-nav-header accent">Resources</li>
                                             <li class="uk-nav-divider"></li>
                                             <li><a href="/faq">FAQ</a></li>
-                                            <li><a href="/portfolio">Portfolio</a></li>
+                                            <li><a href="/blog">Blog</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -150,14 +150,15 @@
                         <li class="uk-nav-header">Hungry Ram</li>
                         <li class="uk-nav-divider"></li>
                         <li><a href="/about">About</a></li>
+                        <li><a href="/portfolio">Portfolio</a></li>
                         <li><a href="/contact">Contact</a></li>
-                        <li><a href="/blog">Blog</a></li>
                         <li class="uk-nav-header">Resources</li>
                         <li class="uk-nav-divider"></li>
                         <li><a href="/faq">FAQ</a></li>
-                        <li><a href="/portfolio">Portfolio</a></li>
+                        <li><a href="/blog">Blog</a></li>
                     </ul>
                 </li>
+                <li><a href="/services">Services</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <li class="uk-nav-divider"></li>
                 <li class="uk-nav-header"></li>
