--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -2,7 +2,7 @@
 <div class="uk-section">
     <div class="uk-container">
         <div>
-            <ul class="uk-child-width-1-2 uk-child-width-1-3@s" uk-grid uk-height-match="target: .uk-card">
+            <ul class="uk-child-width-1-2@s uk-child-width-1-3@s" uk-grid uk-height-match="target: .uk-card">
                 {{ range .Pages }}
                 <li>
                     <div class="uk-card uk-card-default">
