--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -55,8 +55,8 @@
                                             <li><a href="/ecommerce-website-design">Ecommerce website</a></li>
                                             <li class="uk-nav-header accent">Added Website Tools</li>
                                             <li class="uk-nav-divider"></li>
-                                            <li><a href="/google-analytics">Web Analytics</a></li>
-                                            <li><a href="/google-console">Google console</a></li>
+                                            <li><a href="/blog/google-analytics/">Web Analytics</a></li>
+                                            <li><a href="/blog/google-console/">Google console</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -140,8 +140,8 @@
                         <li><a href="/ecommerce-website-design">Ecommerce website</a></li>
                         <li class="uk-nav-header">Added Website Tools</li>
                         <li class="uk-nav-divider"></li>
-                        <li><a href="/google-analytics">Web Analytics</a></li>
-                        <li><a href="/google-console">Google console</a></li>
+                        <li><a href="/blog/google-analytics/">Web Analytics</a></li>
+                        <li><a href="/blog/google-console/">Google console</a></li>
                     </ul>
                 </li>
                 <li class="uk-parent">
