--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -74,6 +74,13 @@
     </div>
 </div>  -->
 
+<div class="uk-section">
+    <div class="uk-container uk-container-small">
+        <div class="border">
+            <img src="{{ .Params.featured_image }}" alt="">
+        </div>
+    </div>
+</div>
 
 <div class="uk-section">
     <div class="uk-container">
