--- a/layouts/portfolio/single.html
+++ b/layouts/portfolio/single.html
@@ -82,21 +82,7 @@
     </div>
 </div>
 
-<div class="uk-section">
-    <div class="uk-container">
-        <hr>
-        <div class="uk-width-1-1 uk-flex uk-flex-center">
-            <div class="uk-width-large uk-text-center">
-                <h6 class="uk-margin-remove">Match the feel of your business</h6>
-                <h2 class="uk-margin-remove uk-text-bold">Consult our experts about your project for free</h2>
-                <div class="uk-margin-medium-top">
-                    <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get a quote</a>
-                    {{ partial "templates/modal" . }}
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{ partial "global/closing" . }}
 
 <div class="uk-section" style="background:#F5F5F5">
     <div class="uk-container uk-container-large">
